@@ -33,4 +33,5 @@ BUGFIXES FROM BUGZILLA:
 024 ==> 370958 - Cannot save a scanned image.
 025 ==> 370943 - Cannot Select EXIF or IPTC Metadata Subspaces.
 026 ==> 371066 - Crash whenever right-clicking in Albums area under the albums list.
-027 ==> 
+027 ==> 371072 - Edit Advanced Search does not show selected labels.
+028 ==> 
